created full web

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <img class="rectangle-2" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/rectangle-2561--stroke-.svg" />
             <img class="ellipse-2" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/ellipse-3956.svg" />
             <img class="fruit-food-apple" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/fruit-food-apple-1.svg" />
-            <div class="text-wrapper-10">ხილი</div>
+            <a class="text-wrapper-10" href="assets/templates/fruitcategory.html">ხილი</a>
           </div>
         </div>
         <div class="group-7" onclick="selectCategory('honey')">
@@ -209,68 +209,74 @@
           <div class="overlap-20">
             <div class="overlap-21" onclick="selectRegion('adjara')">
               <img class="location" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" />
-              <div class="text-wrapper-25">აჭარა</div>
+              <a class="text-wrapper-25" href="assets/templates/map.html">აჭარა</a>
             </div>
             <div class="overlap-22" onclick="selectRegion('guria')">
               <img class="location" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" />
-              <div class="text-wrapper-26">გურია</div>
+              <a class="text-wrapper-26" href="assets/templates/map.html">გურია</a>
             </div>
             <div class="overlap-group-4" onclick="selectRegion('imereti')">
               <img class="location" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" />
-              <div class="text-wrapper-27">იმერეთი</div>
+              <a class="text-wrapper-27" href="assets/templates/map.html">იმერეთი</a>
             </div>
             <div class="overlap-23" onclick="selectRegion('racha')">
               <img class="location-2" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" />
-              <div class="text-wrapper-28">რაჭა-ლეჩხუმი</div>
+              <a class="text-wrapper-28" href="assets/templates/map.html">რაჭა-ლეჩხუმი</a>
             </div>
             <img class="location-3" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('samegrelo')" />
             <img class="location-4" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('svaneti')" />
-            <div class="text-wrapper-29">სამეგრელო</div>
+            <a class="text-wrapper-29" href="assets/templates/map.html">სამეგრელო</a>
             <img class="line" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/line-23.svg" />
-            <div class="text-wrapper-30">სვანეთი</div>
-            <div class="text-wrapper-31">აფხაზეთი</div>
-            <div class="text-wrapper-32">სამცხე-ჯავახეთი</div>
-            <div class="text-wrapper-33">შიდა ქართლი</div>
+            <a class="text-wrapper-30" href="assets/templates/map.html">სვანეთი</a>
+            <a class="text-wrapper-31" href="assets/templates/map.html">აფხაზეთი</a>
+            <a class="text-wrapper-32"href="assets/templates/map.html">სამცხე-ჯავახეთი</a>
+            <a class="text-wrapper-33" href="assets/templates/map.html">შიდა ქართლი</a>
             <div class="overlap-24" onclick="selectRegion('kvemo-kartli')">
-              <div class="text-wrapper-34">ქვემო ქართლი</div>
+              <a class="text-wrapper-34" href="assets/templates/map.html" >ქვემო ქართლი</a>
               <img class="location" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" />
             </div>
-            <div class="text-wrapper-35">კახეთი</div>
-            <div class="text-wrapper-36">მცხეთა-მთიანეთი</div>
+            <a class="text-wrapper-35" href="assets/templates/map.html">კახეთი</a>
+            <a class="text-wrapper-36" href="assets/templates/map.html">მცხეთა-მთიანეთი</a>
             <img class="location-5" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('abkhazia')" />
             <img class="location-6" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('samtskhe')" />
             <img class="location-7" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('kakheti')" />
             <img class="location-8" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('shida-kartli')" />
             <img class="location-9" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-6.svg" onclick="selectRegion('mtskheta')" />
-            <div class="text-wrapper-37">თბილისი</div>
+            <a class="text-wrapper-37" href="assets/templates/map.html">თბილისი</a>
             <img class="location-10" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/location-13.svg" onclick="selectRegion('tbilisi')" />
           </div>
         </div>
-        <div class="text-wrapper-38">კატეგორიები</div>
-        <div class="text-wrapper-39">შეთავაზებული პროდუქტები</div>
-        <div class="text-wrapper-40">საუკეთესო ფერმერები</div>
-        <div class="view" onclick="showMoreProducts()">
-          <div class="overlap-25"><div class="text-wrapper-41">მეტის ჩვენება</div></div>
+        <a class="text-wrapper-38" href="assets/templates/mapfilters.html">კატეგორიები</a>
+        <a class="text-wrapper-39" href="assets/templates/honey.html">შეთავაზებული პროდუქტები</a>
+        <a class="text-wrapper-40" href="assets/templates/farmers.html">საუკეთესო ფერმერები</a>
+        <a class="view" href="assets/templates/mapfilters.html" target="_blank" onclick="showMoreProducts()">
+          <div class="overlap-25"><div class="text-wrapper-41">მეტის ჩვენება</div> </div></a>
         </div>
         <div class="v">
           <div class="overlap-26">
             <div class="overlap-27">
               <div class="rectangle-7"></div>
               <div class="text-wrapper-42">VilleGo</div>
-              <a class="text-wrapper-43" href="assets/templates/blog.html" onclick="navigateTo('blog')" >ბლოგი</a> 
-              <a class="text-wrapper-44" href="" onclick="navigateTo('farmers')">ფერმერები</div>
-              <div class="text-wrapper-45" onclick="navigateTo('about')">ჩვენს შესახებ</div>
-              <div class="text-wrapper-46" onclick="navigateTo('contact')">კონტაქტი</div>
+              <a class="text-wrapper-43" href="assets/templates/blog.html" onclick="navigateTo('blog')">ბლოგი</a>
+              <a class="text-wrapper-44" href="assets/templates/farmer.html" onclick="navigateTo('farmers')">ფერმერები</a>
+              <a class="text-wrapper-45" href="assets/templates/aboutus.html" onclick="navigateTo('about')">ჩვენს შესახებ</a>
+              <a class="text-wrapper-46" href="assets/templates/aboutus.html" onclick="navigateTo('contact')">კონტაქტი</a>
               <div class="rectangle-8"></div>
-              <img class="vector-8" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-3.svg" />
+              <a class="vector-8" href="assets/templates/mapfilters.html" onclick="toggleburger()" >
+              <img src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-3.svg" width="22px" height="22px" /> </a>
               <div class="text-wrapper-47" onclick="performSearch()">ძებნა</div>
-              <div class="text-wrapper-48" onclick="navigateTo('map')">რუკა</div>
+              <a class="text-wrapper-48" href="assets/templates/map.html" onclick="navigateTo('map')">რუკა</a>
               <img class="image-4" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/-------.png" />
-              <img class="vector-9" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-14.svg" onclick="toggleNotifications()" />
-              <img class="vector-10" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-10.svg" onclick="toggleFavorites()" />
-              <img class="vector-11" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-6.svg" onclick="toggleCart()" />
-              <img class="plus-circle" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/plus-circle---1441-.svg" onclick="addProduct()" />
-              <img class="ellipse-3" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/ellipse-3981.png" onclick="toggleProfile()" />
+              <a class="vector-9" href="assets/templates/favorites.html" onclick="togglefavorites()">
+              <img src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-14.svg" width="22px" height="22px" alt="togglefavorites" /></a>
+              <a class="vector-10" href="assets/templates/cart.html" onclick="togglecart()">
+              <img  src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-10.svg" width="22px" height="22px" alt="toggleCart"  /></a>
+              <a class="vector-11" href="assets/templates/message.html"  onclick="toggleNotifications()">
+              <img  src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-6.svg" width="22px" height="22px" alt="toggleNotifications"/></a>
+             <a class="plus-circle" href="assets/templates/addstatement.html" onclick="addProduct()">
+            <img src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/plus-circle---1441-.svg" width="22px" height="22px" alt="Add"></a>
+                <a class="ellipse-3" href="assets/templates/personalpage.html" onclick="toggleProfile()" >
+              <img src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/ellipse-3981.png" width="22px" height="22px" alt="toggleProfile" /></a>
             </div>
             <img class="group-9" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/group-1859.png" />
           </div>
@@ -315,15 +321,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/profile.png" />
-            <div class="text-wrapper-50" onclick="navigateTo('help')">დახმარება</div>
-            <div class="text-wrapper-51" onclick="navigateTo('faq')">ხშირად დასმული კითხვები</div>
+            <a class="text-wrapper-50" href="assets/templates/help.html" onclick="navigateTo('help')">დახმარება</a>
+            <a class="text-wrapper-51" href="assets/templates/help.html" onclick="navigateTo('faq')">ხშირად დასმული კითხვები</a>
             <div class="text-wrapper-52" onclick="navigateTo('feedback')">ანონიმური უკუკავშირი</div>
             <div class="text-wrapper-53" onclick="navigateTo('info')">ინფორმაცია</div>
             <div class="text-wrapper-54" onclick="navigateTo('sales-terms')">გაყიდვის პირობები</div>
             <div class="text-wrapper-55" onclick="navigateTo('terms')">წესები და პირობები</div>
-            <div class="text-wrapper-56" onclick="navigateTo('user')">მომხმარებელი</div>
-            <div class="text-wrapper-57" onclick="navigateTo('register')">რეგისტრაცია</div>
-            <div class="text-wrapper-58" onclick="navigateTo('user-page')">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-56"  href="assets/templates/personalpage.html"  onclick="navigateTo('user')">მომხმარებელი</a>
+            <a class="text-wrapper-57" href="assets/templates/signup.html" onclick="navigateTo('register')">რეგისტრაცია</a>
+            <a class="text-wrapper-58" href="assets/templates/personalpage.html" onclick="navigateTo('user-page')">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-49">VilleGo</span>
               <span class="text-wrapper-59">&nbsp;</span>
@@ -352,13 +358,13 @@
             </p>
             <div class="text-wrapper-68">საქართველო</div>
           </div>
-          <div class="text-wrapper-69" onclick="navigateTo('help-page')">დახმარების გვერდი</div>
-          <div class="text-wrapper-70" onclick="navigateTo('about-page')">ჩვენს შესახებ</div>
+          <a class="text-wrapper-69" href="assets/templates/help.html" onclick="navigateTo('help-page')">დახმარების გვერდი</a>
+          <a class="text-wrapper-70" href="assets/templates/aboutus.html" onclick="navigateTo('about-page')">ჩვენს შესახებ</a>
           <div class="text-wrapper-71" onclick="navigateTo('return-policy')">დაბრუნების პოლიტიკა</div>
           <div class="text-wrapper-72" onclick="navigateTo('privacy-policy')">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-73" onclick="navigateTo('favorites')">ფავორიტები</div>
-          <div class="text-wrapper-74" onclick="navigateTo('cart')">კალათა</div>
-          <img class="vector-13" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-7.svg" onclick="openSocialMedia('facebook')" />
+          <a class="text-wrapper-73" href="assets/templates/favorites.html" onclick="navigateTo('favorites')">ფავორიტები</a>
+          <a class="text-wrapper-74" href="assets/templates/cart.html" onclick="navigateTo('cart')">კალათა</a>
+          <img class="vector-13" src="assets/img/facebook-svgrepo-com.svg" onclick="openSocialMedia('facebook')" />
           <img class="d" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/d.svg" onclick="openSocialMedia('instagram')" />
           <div class="vector-wrapper">
             <img class="vector-14" src="https://c.animaapp.com/mfi4vf7rCfMIOa/img/vector-8.svg" onclick="openSocialMedia('twitter')" />
